--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
-    "mobx-state-tree": "^5.1.3"
+    "mobx-state-tree": "^5.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.1"
